--- a/DBI.Mobile.EMS/iems/Index.html
+++ b/DBI.Mobile.EMS/iems/Index.html
@@ -36,7 +36,7 @@
       .auto-style1
       {
           font-size: 10pt;
-          background-color:bl
+          background-color:black;
           }
       .auto-style2
       {
