--- a/DBI.Mobile.EMS/iems/Index.html
+++ b/DBI.Mobile.EMS/iems/Index.html
@@ -3,7 +3,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" /> 
-  <meta http-equiv="refresh" content="0; url=itms-services://?action=download-manifest&url=https://emsmobiletest.dbiservices.com/iems/iEMS.plist" />
+  <meta http-equiv="refresh" content="0; url=itms-services://?action=download-manifest&url=https://emsmobile.dbiservices.com/iems/iEMS.plist" />
   <title>iEMS Install</title>
 </head>
 </html>
